examples/test/testpolicy1681.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1681
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key40: value9
      key6: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value26
          key1: value9
      podSelector:
        matchLabels:
          key25: value10
          key36: value0
          key31: value38
